--- a/Shift Selector/index.html
+++ b/Shift Selector/index.html
@@ -59,6 +59,8 @@
    When a user clicks a checkbox, holds Shift, and then clicks another checkbox a few rows down, all the checkboxes inbetween those two checkboxes should be checked.
 
   -->
+  <p id = "text"> Hold shift to select multiple checkboxes at once! </p>
+  
   <div class="inbox">
     <div class="item">
       <input type="checkbox">
