--- a/SpeechDetection/index.html
+++ b/SpeechDetection/index.html
@@ -7,7 +7,7 @@
 <body>
 
   <button id ='listen'>Listen to me!</button>
-  <p> Note: This page won't work until I figure out how to get a server running with Github pages which does'nt seem to possible so far.
+  <p> Note: This page won't work until I figure out how to get a server running with Github pages which does not seem to be possible so far.
   You can get this working by downloading the source folder and running npm install and then npm start on your system.</p>
 
   <div class="words" contenteditable>
