--- a/WebcamFun/index.html
+++ b/WebcamFun/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+  <p> Note: This page won't work until I figure out how to get a server running with Github pages which does not seem to be possible so far.
+  You can get this working by downloading the source folder and running npm install and then npm start on your system.</p>
 
   <div class="photobooth">
     <div class="controls">
