--- a/Whack A Mole/index.html
+++ b/Whack A Mole/index.html
@@ -92,8 +92,10 @@
     peep(lowerlimit,upperlimit);
     setTimeout(() =>{
       timeUp = true;
-      if(score > highestScore) localStorage.setItem('highscore', score);
-      highScoreHTML.textContent = 'Highest Score: ' + score;
+      if(score > highestScore) {
+        localStorage.setItem('highscore', score);
+        highScoreHTML.textContent = 'Highest Score: ' + score;
+      }
       difficultyButtons.classList.remove('hide');
     }, 10000)
   }
